tests/errors/tensor_acos_domain.experr
tensor acos
math domain error
